fixed text input overlap;

--- a/react-app/src/components/message/MessageItem.module.css
+++ b/react-app/src/components/message/MessageItem.module.css
@@ -64,6 +64,7 @@
 
 .img__container {
   margin: 0 15px;
+  z-index: 1;
 }
 
 .profile__image {
